tests/error/type_match/base_case_pointer_const_propagation2.bz
// error: unable to match type '*mut *mut int32' to '*mut *int32'
// note: mismatched mutability of types 'mut int32' and 'int32'
function test()
{
	mut i = 0;
	mut pi: *mut int32 = &i;
	mut ppi: *mut *mut int32 = &pi;
	let _: *mut *int32 = ppi;
}
